# gpu-motunui

./: .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: CMakeLists.txt  main.cpp
cmake/: ptx2cpp.cmake
ext/optix_sdk/cuda/: curve.h
ext/optix_sdk/sutil/: Preprocessor.h  vec_math.h
include/moana/: driver.hpp  pipeline.hpp  pipeline_helper.hpp  renderer.hpp  types.hpp
include/moana/core/: bsdf_sample_record.hpp  camera.hpp  coordinates.hpp  frame.hpp  ray.hpp  texture.hpp  transform.hpp  vec3.hpp
include/moana/cuda/: bsdf.hpp  environment_light.hpp  fresnel.hpp  snell.hpp  surface_sample.hpp  tangent_frame.hpp  triangle.hpp  trig.hpp  world_frame.hpp
include/moana/io/: image.hpp
include/moana/parsers/: obj_parser.hpp  string_util.hpp  types.hpp
include/moana/render/: pipeline.hpp
include/moana/scene/: as_arena.hpp  types.hpp
optix/: CMakeLists.txt  coordinates.hpp  kernel.cu  optix_sdk.hpp  random.hpp  ray_data.hpp  sample.hpp  shadow_ray_kernel.cu  util.hpp
optix/bsdfs/: lambertian.hpp  water.hpp
scripts/: code.py  curves.py  dupe_detector.py  files.py  hardcoded_data.py  materials.py  moana.py  obj.py  params.py  textures.py  transforms.py
src/: .gitignore  assert_macros.h  assert_macros.hpp  driver.cpp  hibiscus_geometry.cpp  main.cpp  pipeline.cpp  pipeline_helper.cpp  pipeline_helper.hpp  renderer.cpp  scene.cpp  scene.hpp  texture.cpp  texture.hpp
src/core/: camera.cpp  ptex_texture.cpp  ptex_texture.hpp  texture.cpp  transform.cpp
src/cuda/: environment_light.cu  environment_light.hpp
src/io/: image.cpp
src/parsers/: curve_parser.cpp  curve_parser.hpp  obj_parser.cpp  string_util.cpp
src/render/: .gitignore  pipeline.cpp  pipeline_helper.hpp  renderer.cpp  timing.cpp  timing.hpp
src/scene/: archive.cpp  archive.hpp  as_arena.cpp  bay_cedar_a1_element.cpp  bay_cedar_a1_element.hpp  beach_element.cpp  beach_element.hpp  coastline_element.cpp  coastline_element.hpp  coastline_geometry.cpp  container.cpp  container.hpp  coral_element.cpp  coral_element.hpp  dunes_a_element.cpp  dunes_a_element.hpp  dunes_a_geometry.cpp  dunes_a_geometry.hpp  dunes_b_element.cpp  dunes_b_element.hpp  element.cpp  element.hpp  fixme_light_element.cpp  fixme_light_element.hpp  gardenia_a_element.cpp  gardenia_a_element.hpp  gas.cpp  gas.hpp  geometry_result.hpp  hibiscus_element.cpp  hibiscus_element.hpp  hibiscus_geometry.cpp  hibiscus_geometry.hpp  hibiscus_young_element.cpp  hibiscus_young_element.hpp  ias.cpp  ias.hpp  instances_bin.cpp  instances_bin.hpp  ironwood_a1_element.cpp  (+36 more)
src/scene/data/: texture_lookup_data.cpp  texture_offsets_data.cpp
src/util/: color_map.cpp  color_map.hpp  enumerate.hpp
test/: CMakeLists.txt  test_obj_parser.cpp
